--- a/hangman/scss/components/_eye.scss
+++ b/hangman/scss/components/_eye.scss
@@ -1,3 +1,43 @@
+@keyframes action-blink {
+  0% {
+    transform: translate(0, 0);
+  }
+
+  20% {
+    transform: translate(0, 115px);
+  }
+
+  30% {
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes action-worry {
+  0% {
+    transform: translate(-50%, 0);
+  }
+
+  25% {
+    transform: translate(0, 0);
+  }
+
+  50% {
+    transform: translate(-100%, 0);
+  }
+
+  75% {
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(-50%, 0);
+  }
+}
+
 .eye {
   background-color: #fff;
   width: 75px;
@@ -26,10 +66,40 @@
 
   &__lid {
     width: 75px;
-    height: 115px;
+    height: 250px;
     background-color: darkcyan;
     position: absolute;
-    top: -115px;
+    top: -250px;
     z-index: 1;
   }
+
+  &--blinking {
+    .eye__lid {
+      animation-name: action-blink;
+      animation-duration: 3s;
+      animation-fill-mode: forwards;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+    }
+  }
+
+  &--annoyed {
+    .eye__lid {
+      top: -220px;
+    }
+  }
+
+  &--worried {
+    .eye__pupil {
+      animation-name: action-worry;
+      animation-duration: 3s;
+      animation-fill-mode: forwards;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+    }
+  }
+}
+
+.message {
+  height: 25px;
 }
