--- a/M02S01/ex04/style.css
+++ b/M02S01/ex04/style.css
@@ -1,28 +1,20 @@
-.frame {
-  width: 200px;
-  height: 200px;
-  border: 1px solid #000;
-  position: absolute; 
-}
-
 .car {
-  position: absolute; 
-  bottom: 70px;
-  left: 10px;
+  position: relative;
+  background-color: #000; 
 }
 
 .car__body {
   width: 180px;
   height: 45px;
-  background-color: #000;
+  background-color: inherit;
   position: absolute;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
 
 .car__top {
-  background-color: #000;
-  width: 130px;
+  background-color: inherit;
+  width: 122px;
   height: 45px;
   position: absolute;
   bottom: -10px;
@@ -81,4 +73,18 @@
 
 .light--back.light--on {
   background-color: #F00;
+}
+
+.frame {
+  width: 200px;
+  height: 200px;
+  border: 1px solid #000;
+  position: absolute;
+  background-color: lightgray;
+}
+
+.frame__car {
+  position: absolute; 
+  bottom: 70px;
+  left: 10px;
 }
