--- a/M02S01/ex04/style.css
+++ b/M02S01/ex04/style.css
@@ -84,6 +84,10 @@
   opacity: 0;
 }
 
+.light__hazard.light--front {
+  background-color: #ffeb3b;
+}
+
 @keyframes action-light {
   0% {
     opacity: 1;
